Fixed background color for dark mode in profile settings page

--- a/apps/mobile/pushtracker/src/app/scss/profile-settings/_profile-settings-dark.scss
+++ b/apps/mobile/pushtracker/src/app/scss/profile-settings/_profile-settings-dark.scss
@@ -5,6 +5,11 @@
   @extend .PROFILE_SETTINGS_LAYOUT_BASE;
   background-color: $black;
 
+  MockActionBar,
+  ScrollView {
+    background-color: $black;
+  }
+
   .category {
     @extend .CATEGORY_BASE;
     color: $permobil-cousteau;
